Fix wordwrap

--- a/public/stylesheets/yapc.css
+++ b/public/stylesheets/yapc.css
@@ -3,6 +3,7 @@
 }
 
 .container {
+    word-wrap:break-word;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
